<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weatherapp.features.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.weatherapp.features.favorites.FavoritesFragment"
        android:label="@string/Favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.weatherapp.features.settings.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.example.weatherapp.features.alarms.AlarmsFragment"
        android:label="@string/Alarms"
        tools:layout="@layout/fragment_alarms" />
</navigation>