<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F406E"
    tools:context=".features.favorites.FavoriteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Searchforalocation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/enteredLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enteredLocation"
        android:backgroundTint="@color/white"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded"
        android:text="@string/Location"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:text="@string/Save"
        android:backgroundTint="#3BA4D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enteredLocation" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/places_cancel"
        android:backgroundTint="#3BA4D9"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save" />
</androidx.constraintlayout.widget.ConstraintLayout>