<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F406E"
    tools:context=".features.alarms.AlarmActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/pickdate"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/calendarBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/calendarBtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#2F406E"
        android:scaleType="fitCenter"
        android:src="@drawable/calendar"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clockBtn"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageButton
        android:id="@+id/clockBtn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#2F406E"
        android:scaleType="fitCenter"
        android:src="@drawable/clock"
        android:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/calendarBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/calendarBtn"
        app:layout_constraintStart_toStartOf="@id/calendarBtn"
        app:layout_constraintTop_toBottomOf="@id/calendarBtn" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setTime"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/clockBtn"
        app:layout_constraintStart_toStartOf="@id/clockBtn"
        app:layout_constraintTop_toBottomOf="@id/clockBtn" />


    <Button
        android:id="@+id/saveAlarm"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#3BA4D9"
        android:text="@string/Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendarBtn" />

    <Button
        android:id="@+id/cancelAlarm"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#3BA4D9"
        android:text="@string/places_cancel"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveAlarm" />
</androidx.constraintlayout.widget.ConstraintLayout>